<resources>
    <string name="app_name">Questio</string>

    <string name="test_quest_name">QuestName</string>
    <string name="test_quest_details">QuestDetailsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="test_quest_zoneid">1</string>
    <string name="test_quest_diffid">1</string>

    <string name="dialog_confirm">ยืนยันคำตอบ?</string>
    <string name="test_dialog_answer">คำตอบ</string>


    <string name="dialog_confirm_signout">ลงชื่อออกจาก?</string>
    <string name="dialog_confirm_name">Chasasa Tansassa</string>

    <string name="test_news_datetime">29 Mar 2015 16:00:00</string>
    <string name="test_news_header">Hello New PROMOTION!</string>
    <string name="test_news_content">สำหรับใครที่อยากกินไอติมฟรีไปรับได้ที่ห้องสวนนํ้าชั้น 1 ค่ะ</string>

    <string name="test_questlist_name">Quest A</string>
    <string name="test_questlist_details">Please follow the step</string>

    <string name="test_placeinfo_name">No data available</string>
    <string name="test_placeinfo_fullname">No data available</string>
    <string name="test_placeinfo_contact1">No data available</string>
    <string name="test_placeinfo_contact2">No data available</string>
    <string name="test_placeinfo_www">No data available</string>
    <string name="test_placeinfo_email">No data available</string>

    <string name="test_questaction_zonename">SIT KMUTT</string>
    <string name="test_questaction_item">Gaia Hammer</string>
    <string name="test_questaction_rewards">God</string>
    <string name="test_questaction_type">Misc.</string>
    <string name="questaction_item">Item: </string>
    <string name="questaction_rewards">Rewards: </string>
    <string name="questaction_type">Type: </string>

    <string name="test_quiz_sequence">1</string>
    <string name="test_quiz_question">กำลังโหลด</string>
    <string name="test_quiz_a">....</string>
    <string name="test_quiz_b">....</string>
    <string name="test_quiz_c">....</string>
    <string name="test_quiz_d">....</string>

    <string name="zbar_scan_1">  สแกน QR Code</string>
    <string name="zbar_scan_2">สแกน QR Code ได้เลยครับ</string>
    <string name="zbar_scan_3">QR Code จะถูกสแกนแบบอัตโนมัติเมื่อเราเอากล้องไปอ่านมัน</string>

    <string name="riddle_riddle">กำลังโหลด....</string>
    <string name="riddle_scan">เปิดการแสกน QR Code</string>
    <string name="riddle_unrevealed">"?"</string>

    <string name="quiz_pre">&lt;</string>
    <string name="quiz_next">&gt;</string>
    <string name="quiz_title">1</string>
    <string name="quiz_slash">/</string>
    <string name="quiz_total_number">3</string>
    <string name="wait">wait</string>

    <string name="itemget">ไอเทมที่ได้รับ</string>
    <string name="rewardget">รางวัลที่ได้รับ</string>
    <string name="zonetype">ประเภทของโซน</string>

    <string name="dialog_item_name">ชื่อไอเทม</string>
    <string name="dialog_item_collection">ชุดไอเทม</string>
    <string name="test_item_name">Heart</string>
    <string name="test_item_collection">Kantai</string>
    <string name="dialog_item_close">ปิด</string>

    <string name="test_reward_name">Change the world</string>
    <string name="test_reward_desc">สำหรับผู้ที่เปลี่ยนแปลงโลกใบนี้ได้</string>
    <string name="dialog_reward_daterecieved">วันที่ได้รับ</string>
    <string name="test_reward_datereceived">21/12/2012</string>

    <string name="dialog_correctanswer_test_msg">ถูกต้องนะคร้าบบบบบบ</string>
    <string name="dialog_correctanswer_msg">คำตอบที่ถูกต้องคือ</string>
    <string name="dialog_correctanswer_testanswer">AAAAAAAAAAA</string>
    <string name="dialog_correctanswer_proceed">ไปยังข้อถัดไป</string>

    <string name="dialog_test_obtain_item">ได้รับ Item</string>
    <string name="dialog_test_obtain_reward">ได้รับ Reward</string>
    <string name="dialog_test_obtain_name">หัวใจจักรวาล</string>
    <string name="dialog_test_reward_rank">ระดับทองคำ</string>

    <string name="go_to_your_inventory">go to your inventory</string>

    <string name="dialog_puzzle_finished">ภารกิจ Puzzle สำเร็จ!</string>
    <string name="dialog_riddle_finished">ภารกิจ Riddle สำเร็จ!</string>
    <string name="dialog_puzzle_riddle_score">คะแนนที่ได้รับ</string>
    <string name="dialog_puzzle_riddle_test_score">10 แต้ม</string>
    <string name="dialog_puzzle_riddle_goback">กลับไปยังหน้าจอภารกิจ</string>
    <string name="filter">Filter</string>
    <string name="text_head">Head</string>
    <string name="text_background">Background</string>
    <string name="text_neck">Neck</string>
    <string name="text_body">Body</string>
    <string name="text_left_hand">left Hand</string>
    <string name="text_right_hand">Right Hand</string>
    <string name="text_arm">Arm</string>
    <string name="text_leg">Leg</string>
    <string name="text_foot">Foot</string>
    <string name="text_special">Special</string>
    <string name="touch_here_to_scan">touch here to scan qr code</string>
    <string name="inventory_header">Inventory</string>
    <string name="text_costume">Enjoy your avatar :)</string>
    <string name="hof_header">Hall of Fame</string>
</resources>
