<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_quiz_layout" />


    <TextView
        android:id="@+id/quiz_sequence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_quiz_sequence"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <Button
            android:id="@+id/quiz_pre_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quiz_pre" />

        <TextView
            android:id="@+id/quiz_current_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/quiz_title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/quiz_slash"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quiz_total_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/quiz_total_number"
            android:textSize="20sp" />

        <Button
            android:id="@+id/quiz_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quiz_next" />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/quiz_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/test_quiz_question"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/quiz_choice_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/quiz_question"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/answer_button"
                android:text="@string/test_quiz_a"
                android:textColor="@color/grey_900" />

            <Button
                android:id="@+id/quiz_choice_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/quiz_choice_1"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/answer_button"
                android:text="@string/test_quiz_b"
                android:textColor="@color/grey_900" />

            <Button
                android:id="@+id/quiz_choice_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/quiz_choice_2"
                android:layout_marginBottom="20dp"
                android:background="@drawable/answer_button"
                android:text="@string/test_quiz_c"
                android:textColor="@color/grey_900" />

            <Button

                android:id="@+id/quiz_choice_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/quiz_choice_3"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/answer_button"
                android:text="@string/test_quiz_d"
                android:textColor="@color/grey_900" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>



