<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFE74C3C"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/dialog_item_picture"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@color/white"
            android:layout_marginEnd="20dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/dialog_item_name"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/dialog_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/test_item_name"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/dialog_item_collection"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/dialog_item_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/test_item_collection"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<Button-->
            <!--android:id="@+id/button_item_close"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/dialog_item_close"/>-->
    </LinearLayout>
</LinearLayout>